Correct alignment of quote text

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ body {
     color: #1F2937;
     font-style: italic;
     font-weight: lighter;
+    text-align: left;
 }
 
 .quote-author {
